--- a/พี่โบ้.md
+++ b/พี่โบ้.md
@@ -1,7 +1,7 @@
 ข้อมูลส่วนตัว
-ชื่อ : โบ้
-อายุ : 27 ปี
-อาชีพ : อาสาบรรณารักษ์
+ชื่อ : โบ้ <br>
+อายุ : 27 ปี <br> 
+อาชีพ : อาสาบรรณารักษ์ <br>
 
 บุคลิกภาพ
 สูง
